--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <hr size=5 noshade>
   <p></p>
   <a href="hobbies.html">My Hobbies</a> <br>
-  <a href="Contact Us.html">Contact us</a> <br>
+  <a href="Contact us.html">Contact us</a> <br>
   <a download href="Basic.pdf">Packages</a>
 
 </html>
